# talos-api-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  Readme.md  SECURITY.md  build.rs  copilot-harness.sh  howto-oss.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/gh-scripts/: assign-repo-to-team.sh  merge-pr.sh  setup-branch-protection.sh
.github/prompts/: auto-merge-pr.prompt.md  check-pr.prompt.md  create-pr.prompt.md  merge-pr.md  new-feature.prompt.md
.github/workflows/: ci.yml  release.yml
docs/: api-stability.md  app-concept.md  architecture.md  release-checklist.md  release-preparations.md  testing.md  todo.md
examples/: machine.rs  monitoring_metrics.rs  mtls_test.rs  resilient_client.rs  talosconfig.rs  version.rs
proto/common/: version.proto
src/: lib.rs
src/api/: mod.rs
src/client/: discovery.rs  mod.rs  node_target.rs  pool.rs  tests.rs
src/config/: mod.rs  talosconfig.rs
src/error/: mod.rs
src/resources/: advanced.rs  bootstrap.rs  configuration.rs  dmesg.rs  etcd.rs  events.rs  files.rs  images.rs  kubeconfig.rs  logs.rs  mod.rs  reset.rs  services.rs  system.rs  upgrade.rs
src/runtime/: circuit_breaker.rs  logging.rs  metrics.rs  mod.rs  retry.rs  tracing.rs
src/testkit/: mod.rs
tests/: integration_test.rs
