[package]
name = "talos-api-rs"
version = "0.1.0"
edition = "2021"
description = "A typed, async, idiomatic Rust client for the Talos Linux gRPC API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/XMV-Solutions-GmbH/talos-api-rs"
authors = ["Talos API Rust Contributors"]
keywords = ["talos", "linux", "api", "client", "grpc"]
categories = ["api-bindings", "infrastructure"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "2.0"
tower = "0.5"
http = "1.0"
url = "2.5"
bytes = "1.5"
tracing = "0.1"
rustls = { version = "0.23.36", features = ["logging", "ring", "std", "tls12"], default-features = false }
tokio-rustls = { version = "0.26.4", features = ["logging", "ring", "tls12"], default-features = false }
hyper-util = { version = "0.1.19", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
base64 = "0.22.1"
tempfile = "3.10"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }
tempfile = "3.10"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
base64 = "0.22.1"
