[package]
name = "talos-api-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
description = "A typed, async, idiomatic Rust client for the Talos Linux gRPC API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/XMV-Solutions-GmbH/talos-api-rs"
documentation = "https://docs.rs/talos-api-rs"
homepage = "https://github.com/XMV-Solutions-GmbH/talos-api-rs"
readme = "Readme.md"
authors = ["XMV Solutions GmbH", "Talos API Rust Contributors"]
keywords = ["talos", "linux", "grpc", "kubernetes", "async"]
categories = ["api-bindings", "asynchronous", "network-programming"]
exclude = [
    ".github/",
    "tests/",
    "docs/",
    "*.md",
    "!Readme.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
thiserror = "2.0"
tower = "0.5"
http = "1.0"
url = "2.5"
bytes = "1.5"
tracing = "0.1"
rand = "0.8"
rustls = { version = "0.23.36", features = ["logging", "ring", "std", "tls12"], default-features = false }
tokio-rustls = { version = "0.26.4", features = ["logging", "ring", "tls12"], default-features = false }
rustls-pemfile = "2.2"
webpki-roots = "1.0"
hyper-util = { version = "0.1.19", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
base64 = "0.22.1"
tempfile = "3.10"
dirs = "5.0"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio-test = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }
tempfile = "3.10"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
